--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ flutter:
   assets:
     - assets/images/classic_burger.jpg
     - assets/images/empty_state.png
+    - assets/images/baraa.jpg
+    - assets/images/qassam.jpg
+    - assets/images/baraa_wb.jpg
+    - assets/images/baraa_black.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
